--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
         "storename"
     ],
     "cSpell.words": [
+        "accounty",
         "ordery",
-        "Secheduley"
+        "Secheduley",
+        "Semail"
     ]
 }
